--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,56 @@
 ---
 # vars file for private-aws
+
+ec2_instance_count: 5
+
+ec2_region: us-east-1
+ec2_region_sidea: "{{ ec2_region }}a"
+ec2_region_sideb: "{{ ec2_region }}e"
+
+private_cidr_b: 192.168.0.0/16
+private_cidr_c_sidea: 192.168.1.0/24
+private_cidr_c_sideb: 192.168.2.0/24
+
+public_cidr_b: 10.0.0.0/16
+public_cidr_b_sidea: 10.0.1.0/24
+
+public_manifest:
+  - nodes:
+      role: node
+      count: 4
+      rootvol:
+        size: 10
+        type: gp2
+      volumes:
+        - xvdb:
+            name: /dev/xvdb
+            type: gp2
+            size: 100
+  - bastions:
+      role: bastion
+      count: 1
+      rootvol:
+        size: 10
+        type: gp2
+      volumes:
+        - xvdb:
+            name: /dev/xvdb
+            type: gp2
+            size: 100
+        - xvdc:
+            name: /dev/xvdc
+            type: gp2
+            size: 100
+
+private_manifest:
+  - nodes:
+      role: node
+      count: 4
+      rootvol:
+        size: 10
+        type: gp2
+      volumes:
+        - xvdb:
+            name: /dev/xvdb
+            type: gp2
+            size: 100
