--- a/vars/main.yml
+++ b/vars/main.yml
@@ -10,6 +10,8 @@ ec2_instance_count: 5
 ec2_region: us-east-1
 ec2_region_sidea: "{{ ec2_region }}a"
 ec2_region_sideb: "{{ ec2_region }}e"
+ec2_image: ami-2051294a
+ec2_instance_type: m4.xlarge
 
 private_cidr_b: 192.168.0.0/16
 private_cidr_c_sidea: 192.168.1.0/24
