Added support for pre-existing VPCs. Untested.

--- a/tasks/instances.yml
+++ b/tasks/instances.yml
@@ -1,33 +1,15 @@
 ---
-- ec2_vpc_subnet_facts:
-    filters:
-      "tag:Name": "{{ cluster_id }}-public-sidea"
-    region: "{{ ec2_region }}"
-  when:
-  register: vpc_public_subnet
+- include: vpc/get_ids_created.yml
+  when: create_vpcs
+  # Sets the following facts:
+  #   public_vpc_id
+  #   public_subnet_id
+  #   private_vpc_id
+  #   private_subnet_id_sidea
+  #   private_subnet_id_sideb
 
-# TODO left off here
-
-- set_fact:
-    public_vpc_id: "{{ vpc_public_subnet.subnets[0].vpc_id }}"
-
-- set_fact:
-    public_subnet_id: "{{ vpc_public_subnet.subnets[0].id }}"
-
-- ec2_vpc_subnet_facts:
-    filters:
-      "tag:parent_vpc": "{{ cluster_id }}-private"
-    region: "{{ ec2_region }}"
-  register: vpc_private_subnet
-
-- set_fact:
-    private_vpc_id: "{{ vpc_private_subnet.subnets[0].vpc_id }}"
-
-- set_fact:
-    private_subnet_id_sidea: "{{ vpc_private_subnet.subnets[0].id }}"
-
-- set_fact:
-    private_subnet_id_sideb: "{{ vpc_private_subnet.subnets[1].id }}"
+- include: vpc/get_ids_extant.yml
+  when: not create_vpcs
 
 - name: Create public security group
   ec2_group:
