--- a/tasks/instances.yml
+++ b/tasks/instances.yml
@@ -78,6 +78,8 @@
     ec2_public_instances: "{{ ec2.results[0].tagged_instances }}"
   when: ec2.results[0].tagged_instances is defined and ec2.results[0].tagged_instances
 
+- add_host: name="{{ ec2_public_instances[0].public_dns_name }}" groups=bastion
+
 - name: Add volumes to public bastion instances
   ec2_vol:
     region: "{{ ec2_region }}"
@@ -172,7 +174,7 @@
     - "{{ ec2_public_instances }}"
 
 - name: Wait for successful SSH
-  command: "ssh -o StrictHostKeyChecking=no -o PasswordAuthentication=no -o ConnectTimeout=10 -o UserKnownHostsFile=/dev/null centos@{{ item.public_dns_name }} echo host is up"
+  command: "ssh -o StrictHostKeyChecking=no -o PasswordAuthentication=no -o ConnectTimeout=10 -o UserKnownHostsFile=/dev/null {{ ec2_username }}@{{ item.public_dns_name }} echo host is up"
   with_items:
     - "{{ ec2_public_instances }}"
   register: result
