--- a/tasks/security_groups.yml
+++ b/tasks/security_groups.yml
@@ -1,6 +1,6 @@
 ---
 - name: Run sg template
-  template: src=security_groups.j2 dest=./roles/aws/vars/rules.yml
+  template: src=security_groups.j2 dest=./roles/ansible-private-aws/vars/rules.yml
 
 - name: Load sg vars
   include_vars: rules.yml
