Squashed many bugs, working on integrating VNC role

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,5 @@
 ---
 # tasks file for private-aws
-- include: vpc.yml
-  when: create_vpcs
-- include: instances.yml
-- include: security_groups.yml
+- include: private_aws.yml
+  tags:
+    - private_aws
