Added extra volume for docker registry

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -34,6 +34,9 @@ public_manifest:
       - name: /dev/xvdc
         type: gp2
         size: 100
+      - name: /dev/xvdd
+        type: gp2
+        size: 100
 
 private_manifest:
   nodes:
