--- a/tasks/instances.yml
+++ b/tasks/instances.yml
@@ -78,6 +78,9 @@
     ec2_public_instances: "{{ ec2.results[0].tagged_instances }}"
   when: ec2.results[0].tagged_instances is defined and ec2.results[0].tagged_instances
 
+- set_fact:
+    bastion_instance_id: "{{ ec2_public_instances[0].id }}"
+
 - add_host: name="{{ ec2_public_instances[0].public_dns_name }}" groups=bastion
 
 - name: Add volumes to public bastion instances
@@ -91,6 +94,34 @@
   with_nested:
     - "{{ ec2_public_instances }}"
     - "{{ public_manifest['bastions']['volumes'] }}"
+
+- name: Allocate elastic ip for the bastion host
+  ec2_eip:
+    in_vpc: yes
+    release_on_disassociation: yes
+    reuse_existing_ip_allowed: yes
+    state: present
+    region: "{{ ec2_region }}"
+    instance_id: "{{ bastion_instance_id }}"
+  register: bastion_eip
+
+# You need this part to work for the SSH proxy logic
+- name: Create a Route 53 entry for the bastion
+  route_53:
+    command: create
+    zone: "{{ r53_zone }}"
+    record: "bastion.{{ cluster_id }}.{{ r53_zone }}"
+    type: A
+    ttl: 60
+    value: "{{ bastion_eip.public_ip }}"
+    wait: yes
+    overwrite: yes
+
+- name: Create the bastion ssh config file
+  connection: local
+  template:
+    src: ssh_bastion.j2
+    dest: ./ssh_bastion.cfg
 
 - name: Create ec2 private nodes on side a
   include: instances/create_instance.yml
@@ -207,6 +238,12 @@
   with_items:
     - "{{ ec2_public_instances }}"
     - "{{ ec2_private_instances }}"
+
+- name: create the host file for private instances
+  connection: local
+  template:
+    src: private_hosts.j2
+    dest: ./inventory/static/hosts
 
 - name: Wait for SSH to come up on public instances
   wait_for: host={{ item.public_dns_name }} port=22 delay=0 timeout=600 state=started
