--- a/tasks/instances.yml
+++ b/tasks/instances.yml
@@ -107,7 +107,7 @@
 
 # You need this part to work for the SSH proxy logic
 - name: Create a Route 53 entry for the bastion
-  route_53:
+  route53:
     command: create
     zone: "{{ r53_zone }}"
     record: "bastion.{{ cluster_id }}.{{ r53_zone }}"
@@ -238,6 +238,12 @@
   with_items:
     - "{{ ec2_public_instances }}"
     - "{{ ec2_private_instances }}"
+
+- debug: var=ec2_private_instances
+- debug: var=ec2_private_nodes_sidea
+- debug: var=ec2_private_nodes_sideb
+- debug: var=ec2_private_bind_sidea
+- debug: var=ec2_private_bind_sideb
 
 - name: create the host file for private instances
   connection: local
