--- a/tasks/instances.yml
+++ b/tasks/instances.yml
@@ -123,6 +123,46 @@
     src: ssh_bastion.j2
     dest: ./ssh_bastion.cfg
 
+# TODO when I'm less lazy, paramaterize this better and repeat less code
+# TODO also, instance size should come from the manifest dicts so they're not all super large
+- name: Create ec2 private masters on side a
+  include: instances/create_instance.yml
+  vars:
+    my_group_id: "{{ private_security_group.group_id }}"
+    my_Name: "{{ cluster_id }}-{{ item['role'] }}-instance"
+    my_instance_role: "{{ item['role'] }}"
+    my_env: "{{ cluster_id }}"
+    my_side: "sidea"
+    my_vpc_subnet_id: "{{ private_subnet_id_sidea }}"
+    my_items: "{{ private_manifest['masters'] }}"
+
+- set_fact:
+    ec2_private_masters_sidea:  "{{ ec2.results[0].instances }}"
+  when: ec2.results[0].instances is defined and ec2.results[0].instances
+
+- set_fact:
+    ec2_private_masters_sidea: "{{ ec2.results[0].tagged_instances }}"
+  when: ec2.results[0].tagged_instances is defined and ec2.results[0].tagged_instances
+
+- name: Create ec2 private masters on side b
+  include: instances/create_instance.yml
+  vars:
+    my_group_id: "{{ private_security_group.group_id }}"
+    my_Name: "{{ cluster_id }}-{{ item['role'] }}-instance"
+    my_instance_role: "{{ item['role'] }}"
+    my_env: "{{ cluster_id }}"
+    my_side: "sideb"
+    my_vpc_subnet_id: "{{ private_subnet_id_sideb }}"
+    my_items: "{{ private_manifest['masters'] }}"
+
+- set_fact:
+    ec2_private_masters_sideb:  "{{ ec2.results[0].instances }}"
+  when: ec2.results[0].instances is defined and ec2.results[0].instances
+
+- set_fact:
+    ec2_private_masters_sideb: "{{ ec2.results[0].tagged_instances }}"
+  when: ec2.results[0].tagged_instances is defined and ec2.results[0].tagged_instances
+
 - name: Create ec2 private nodes on side a
   include: instances/create_instance.yml
   vars:
@@ -201,6 +241,8 @@
 
 - set_fact: ec2_private_instances_list="{{ item }}"
   with_items:
+    - "{{ ec2_private_masters_sidea }}"
+    - "{{ ec2_private_masters_sideb }}"
     - "{{ ec2_private_nodes_sidea }}"
     - "{{ ec2_private_nodes_sideb }}"
     - "{{ ec2_private_bind_sidea }}"
@@ -209,7 +251,8 @@
 
 - set_fact: ec2_private_instances="{{ ec2_private_instances_list_result.results | map(attribute='ansible_facts.ec2_private_instances_list') | list }}"
 
-- name: Add volumes to private node instances
+# TODO: huh, I think we're adding volumes to the bind instances. That's dumb.
+- name: Add volumes to private master and node instances
   ec2_vol:
     instance: "{{ item[0].id }}"
     region: "{{ ec2_region }}"
@@ -239,11 +282,13 @@
     - "{{ ec2_public_instances }}"
     - "{{ ec2_private_instances }}"
 
-- debug: var=ec2_private_instances
-- debug: var=ec2_private_nodes_sidea
-- debug: var=ec2_private_nodes_sideb
-- debug: var=ec2_private_bind_sidea
-- debug: var=ec2_private_bind_sideb
+#- debug: var=ec2_private_instances
+#- debug: var=ec2_private_masters_sidea
+#- debug: var=ec2_private_masters_sideb
+#- debug: var=ec2_private_nodes_sidea
+#- debug: var=ec2_private_nodes_sideb
+#- debug: var=ec2_private_bind_sidea
+#- debug: var=ec2_private_bind_sideb
 
 - name: create the host file for private instances
   connection: local
