--- a/tasks/instances/create_instance.yml
+++ b/tasks/instances/create_instance.yml
@@ -3,7 +3,8 @@
     image: "{{ ec2_image }}"
     region: "{{ ec2_region }}"
     key_name: "{{ ec2_keypair }}"
-    instance_type: "{{ ec2_instance_type }}"
+#    instance_type: "{{ ec2_instance_type }}"
+    instance_type: "{{ my_type }}"
     group_id: "{{ my_group_id }}"
     instance_tags:
       Name: "{{ my_Name }}"
