--- a/vars/main.yml
+++ b/vars/main.yml
@@ -23,6 +23,7 @@ public_cidr_c_sidea: 10.0.1.0/24
 public_manifest:
   bastions:
     role: bastion
+    type: m4.xlarge
     count: 1
     rootvol:
       size: 10
@@ -38,10 +39,11 @@ public_manifest:
         type: gp2
         size: 100
 
-# TODO right now masters get the same volumes as nodes. master volumes dict is ignored
+# TODO right now masters get the same volumes as nodes. other volumes dicts are ignored
 private_manifest:
   masters:
     role: master
+    type: m4.large
     count: 2
     rootvol:
       size: 10
@@ -52,6 +54,7 @@ private_manifest:
         size: 100
   nodes:
     role: node
+    type: m4.xlarge
     count: 2
     rootvol:
       size: 10
@@ -61,6 +64,21 @@ private_manifest:
         type: gp2
         size: 100
   bind:
+    role: bind
+    type: t2.small
+    count: 1
+    rootvol:
+      size: 10
+      type: gp2
+  etcd:
+    type: t2.medium
+    role: bind
+    count: 1
+    rootvol:
+      size: 10
+      type: gp2
+  lb:
+    type: m4.large
     role: bind
     count: 1
     rootvol:
